# pose_trajectory_packages

./: .gitignore
src/polstro/: CMakeLists.txt
src/ros_control_boilerplate/: CMakeLists.txt  package.xml  ros_control_boilerplate.files  ros_control_boilerplate.includes
src/ros_control_boilerplate/include/ros_control_boilerplate/: rsptilt_ik_service.hpp  sim_hw_interface.h
src/ros_control_boilerplate/resources/: rsptilt-chain.urdf  rsptilt.urdf
src/ros_control_boilerplate/rrbot_control/config/: rrbot_controllers.yaml
src/ros_control_boilerplate/rrbot_control/launch/: rrbot_simulation.launch  (+1 more)
src/ros_control_boilerplate/src/: sim_hw_interface.cpp
src/rsptilt_kinematics_plugin/src/: RSPtilt_kinematics.cpp
src/ryan_gesture_generation/: CMakeLists.txt
src/ryan_gesture_generation/src/: dynamic_gesture_generators.cpp  dynamic_gesture_tester.cpp
src/ryan_msgs/primitive_msgs/: CMakeLists.txt  package.xml
src/ryan_msgs/primitive_msgs/msg/: PoseTrajectoryPoint.msg
src/ryan_msgs/ryan_msgs/: CMakeLists.txt  package.xml
src/ryan_neck_controller/: CMakeLists.txt  package.xml
src/ryan_neck_controller/launch/: ryan_neck_control.launch
src/ryan_neck_controller/msg/: GestureCommand.msg  MotionCommand.msg  MotionStatus.msg
src/ryan_neck_controller/src/: controller_test_node.cpp  dynamic_gesture_generators.cpp  ryan_neck_controller.cpp  ryan_neck_controller_node.cpp
src/ryan_neck_controller/srv/: UpdateMotion.srv
src/ryan_trajectory_merger/: CMakeLists.txt  package.xml
src/ryan_trajectory_merger/src/: ryan_trajectory_merger_test_node.cpp
(+10 files in other folders)
