<?xml version="1.0"?>
<package format="2">
  <name>primitive_msgs</name>
  <version>0.1.0</version>
  <description>The primitive_msgs package</description>

  <maintainer email="Lane@todo.todo">Josh Lane</maintainer>

  <license>Apache 2.0</license>

  <author >Josh Lane</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
