<?xml version="1.0"?>
<package format="2">
  <name>ryan_msgs</name>
  <version>0.1.0</version>
  <description>The ryan_msgs package</description>

  <maintainer email="Lane@todo.todo">Josh Lane</maintainer>

  <license>Apache 2.0</license>

  <author >Josh Lane</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>primitive_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
